syntax = "proto3";

package api;

message Record {
  int64 Timestamp = 1;
  bytes Topic = 2;
  bytes Payload = 3;
}

message PutRecordsRequest{
  repeated Record Records = 1;
}
message PutRecordsResponse {}
message GetRecordsRequest{
  int64 Shard = 1;
  uint64 FromOffset = 2;
  repeated bytes Patterns = 3;
}
message GetRecordsResponse {
  repeated Record Records = 1;
}
message DumpRequest {
  string DestinationURL = 1;
}
message DumpResponse {
  int64 StartedAt = 1;
  int64 ProgressBytes = 2;
  int64 TotalBytes = 3;
}
message SSTRequest {};
message SSTResponseChunk {
  bytes Chunk = 1;
};
message LoadRequest {
  string SourceURL = 1;
}
message LoadResponse {
  int64 StartedAt = 1;
  int64 ProgressBytes = 2;
  int64 TotalBytes = 3;
}
service Messages {
  rpc PutRecords(PutRecordsRequest) returns (PutRecordsResponse) {}
  rpc GetRecords(GetRecordsRequest) returns (stream GetRecordsResponse) {}
}